updated from image cover to image contain to ensure image is not cropped

--- a/styles/sass/_content-page.scss
+++ b/styles/sass/_content-page.scss
@@ -7,7 +7,7 @@ header{
 
 img {
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     max-height: 60vh;
     margin-top: 35px;
